# foodgram-project-react

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  production_deploy.yaml  pyproject.toml  setup.cfg
.github/workflows/: production_deploy.yaml
backend/: Dockerfile  Makefile  manage.py  pyproject.toml  pytest.ini
backend/configuration/: asgi.py  settings.py  urls.py  wsgi.py
backend/configuration/settings/: base.py  develop.py  local.py  prod.py  test.py
backend/data/: Diplom.postman_collection.json
backend/recipes/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_ingredient.py  0003_auto_20210903_1946.py  0004_alter_ingredient_name.py  0005_auto_20210903_2203.py  0006_auto_20210908_1939.py  0007_alter_ingredientitem_ingredient.py  0008_auto_20210916_1456.py  0009_auto_20210916_1457.py  0010_auto_20210917_2012.py
backend/recipes/templates/: base.html  cart_list_pdf.html
backend/recipes/tests/: factories.py  test_urls.py
backend/requirements/: develop.txt  production.txt
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/management/commands/: createadmin.py  filldb.py
backend/users/migrations/: 0001_initial.py  0002_auto_20210816_2212.py  0003_auto_20210917_2012.py
backend/users/tests/: factories.py  test_urls.py  test_views.py
infra/: Makefile  develop.yaml  local.yaml  nginx.conf  production.conf  production.yaml
requirements/: develop.txt  production.txt
