[tool.poetry]
name = "foodgram"
version = "0.1.0"
description = ""
authors = ["Konstantin Raikhert <konstantinraihert@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pylint = "^2.9.4"
pre-commit = "^2.13.0"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
