[tool.poetry]
name = "foodgram"
version = "0.1.0"
description = ""
authors = ["Konstantin Raikhert <konstantinraihert@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
pylint = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
